# AI-Project

./: README.md  catalog_info.yaml  pyproject.toml  requirements.txt
backend/: mcp_client_ai.py  mcp_gamini_ai.py
docs/: backend_api_reference.md
frontend/: chatpage.html
servers/: generatefiles_server.py  terminal_server.py
src/: __init__.py
src/backend/: __init__.py
src/servers/: __init__.py
