[project]
name = "dim-python-fastapi-template"
version = "0.1.0"
description = "A FastAPI template for Gemini QA Service with async PostgreSQL, Google Gemini LLM, and optional OpenAI support."
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  # --- Web Framework ---
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "python-multipart",

  # --- Database ---
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.0",

  # --- Data Validation ---
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",

  # --- LLMs & AI SDKs ---
  "google-generativeai",
  "google-genai",
  "httpx>=0.27.0",
  "openai>=1.0.0",

  # --- Dev Tools ---
  "uv",
  "alembic>=1.10.0",

  # --- System Utilities ---
  "psutil",

  # --- Testing ---
  "pytest",
  "pytest-asyncio",
  "pytest-cov"
]


[tool.uv]
# uv config placeholder

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
